<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/texViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_toStartOf="@+id/buttonChange"
            android:layout_toLeftOf="@+id/buttonChange"
            android:fontFamily="@font/brown_thin"
            android:gravity="center_vertical"
            android:text="@string/kudigo_storefront_payment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChange"
            style="@style/MaterialTextButtonOutlineStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/brown_thin"
            android:text="@string/change_network"
            android:textColor="@color/colorLightDark" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/texViewTitle"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gray" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewImageViewIcon"
            android:layout_width="@dimen/pay_icon_processing"
            android:layout_height="@dimen/pay_icon_processing"
            android:layout_below="@+id/viewDivider"
            android:layout_marginTop="@dimen/margin_small"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/imageViewGetWayIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_grey_bg"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/textViewGateWay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cardViewImageViewIcon"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toEndOf="@+id/cardViewImageViewIcon"
            android:layout_toRightOf="@+id/cardViewImageViewIcon"
            android:fontFamily="@font/brown_regular"
            android:gravity="center_vertical"
            android:text="@string/mtn_mobile_money"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGateWay"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/divider_height"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_toEndOf="@+id/cardViewImageViewIcon"
            android:layout_toRightOf="@+id/cardViewImageViewIcon"
            android:fontFamily="@font/brown_thin"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />


        <TextView
            android:id="@+id/textViewOrderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewImageViewIcon"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/brown_thin"
            android:gravity="start"
            android:text="@string/order_no"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textViewOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewImageViewIcon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/brown_regular"
            android:gravity="end"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewOrder"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/brown_thin"
            android:gravity="center"
            android:text="@string/momo_authorization_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorRed" />

        <ProgressBar
            android:id="@+id/paymentProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMessage"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_small" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMobileMoneyAction"
            style="@style/MaterialTextButtonOutlineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paymentProgress"
            android:fontFamily="@font/brown_regular"
            android:text="@string/done" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/MaterialTextButtonOutlineStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@+id/buttonMobileMoneyAction"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/brown_thin"
            android:text="@string/cancel"
            android:textColor="@color/colorLightDark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOptions"
            style="@style/MaterialTextButtonOutlineStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/buttonMobileMoneyAction"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/buttonCancel"
            android:layout_toRightOf="@+id/buttonCancel"
            android:fontFamily="@font/brown_thin"
            android:text="@string/retry" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>